--- a/kadai-html.html
+++ b/kadai-html.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>HTML/CSSでWebページ作成</title>
-    </head>
+        <link rel="stylesheet" href="kadai-css.css"
     <body>
         <header>
             <p>ここはヘッダーです。</p>
