--- a/kadai-html.html
+++ b/kadai-html.html
@@ -5,9 +5,7 @@
         <title>HTML/CSSでWebページ作成</title>
         <link rel="stylesheet" href="kadai-css.css"
     <body>
-        <header>
-            <p>ここはヘッダーです。</p>
-        </header>
+        <header>ここはヘッダーです。 </header>
         <div id="wrapper">
             <div id="main">
                 <h1>HTML/CSSでWebページ作成</h1>
@@ -32,8 +30,6 @@
                 </ul>
             </nav>
         </div>
-        <footer>
-            <P>ここはフッターです。</P>
-        </footer>
+        <footer>ここはフッターです。</footer>
     </body>
 </html>
