--- a/kadai-html.html
+++ b/kadai-html.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>HTML/CSSでWebページ作成</title>
-        <link rel="stylesheet" href="kadai-css.css"
+        <link rel="stylesheet" href="kadai-css.css">
+    </head>    
     <body>
-        <header>ここはヘッダーです。 </header>
+        <header>
+            ここはヘッダーです。 
+        </header>
         <div id="wrapper">
             <div id="main">
                 <h1>HTML/CSSでWebページ作成</h1>
@@ -30,6 +33,8 @@
                 </ul>
             </nav>
         </div>
-        <footer>ここはフッターです。</footer>
+        <footer> 
+        　　ここはフッターです。
+        </footer>
     </body>
 </html>
